# ros_myrobotmaster_pc

./: README.md
src/myrobot/myrobotmaster/: CMakeLists.txt  myrobotmaster.kdev4  package.xml
src/myrobot/myrobotmaster/.kdev4/: myrobotmaster.kdev4
src/myrobot/myrobotmaster/config/: pi3-mqtt.yaml  twist_mux_topics.yaml
src/myrobot/myrobotmaster/launch/: _clear_costmap.sh  myrobot_autoexec.launch  myrobot_explorer.launch  myrobot_facerecognitionPC.launch  myrobot_facerecognitionROBOT.launch  myrobot_followme.launch  myrobot_gmapping.launch  myrobotmaster__navstack.launch  myrobotmaster__root.launch  myrobotmaster__root_amcl_fake.launch  myrobotmaster_amcl.launch  myrobotmaster_amcl_fake.launch  myrobotmaster_base_footprint_fake.launch  myrobotmaster_cmdvel_mux.launch  myrobotmaster_dashboard.launch  myrobotmaster_dialogflow.launch  myrobotmaster_ekf.launch  myrobotmaster_explorer.launch  myrobotmaster_facerecognition.launch  myrobotmaster_gazebo.launch  myrobotmaster_gmapping.launch  myrobotmaster_hector.launch  myrobotmaster_imageview.launch  myrobotmaster_imgrepublish_PC_usbcam.launch  myrobotmaster_imgrepublish_robot_usbcam.launch  myrobotmaster_joy.launch  myrobotmaster_leg_detector.launch  myrobotmaster_leg_tracker.launch  myrobotmaster_map.launch  myrobotmaster_move_base_allmyparameters.launch  myrobotmaster_move_carrot.launch  myrobotmaster_move_eband.launch  myrobotmaster_move_navfn.launch  myrobotmaster_move_teb.launch  myrobotmaster_mqtt_bridge.launch  myrobotmaster_rm_follower.launch  myrobotmaster_rosbridge.launch  myrobotmaster_rviz.launch  myrobotmaster_scan2tf.launch  myrobotmaster_tf.launch  (+3 more)
src/myrobot/myrobotmaster/launch/obsolete/: myrobot_gazebo.launch  myrobotmaster_detect_dnn.launch  myrobotmaster_detect_dnnPCwebcam.launch  myrobotmaster_detect_edgetpu.launch  myrobotmaster_espeak.launch  myrobotmaster_fake_odom_base.launch  myrobotmaster_move.launch  myrobotmaster_odom.launch  myrobotmaster_odom_fake.launch  myrobotmaster_pid.launch  myrobotmaster_wifi.launch
src/myrobot/myrobotmaster/launch/prove/: _prova_actionlib.launch  _prova_audiocapture.launch  _prova_audioplay.launch  _prova_rrt_explorer.launch  myrobotmaster_actionserver.launch  myrobotmaster_cmdvelmux.launch  myrobotmaster_findmovingobjects.launch  myrobotmaster_gazebo.launch  myrobotmaster_gazebo2.launch  myrobotmaster_voice_commands.launch  test_client_move_action_server.launch  test_facerecognition_pcwebcam.launch  test_myrobot_noscan.launch  test_navstack.launch  x_scan_matcher.launch  x_serial_AvrMega.launch  x_serial_esp32.launch  x_svo.launch  x_udp.launch  x_usb.launch  xr_odomEsp32.launch
src/myrobot/myrobotmaster/map/: chiavari.pgm  chiavari.pgm~  chiavari.yaml  gmap2.pgm.pgm  gmap2.pgm.yaml  mappa_chiavari.pgm  mappa_chiavari.yaml
src/myrobot/myrobotmaster/map/maps not used/: gmap1.pgm  gmap1.yaml  map.bkp.pgm  map1530x1490.pgm  map2.pgm  map3.pgm  map4.xcf  map5.pgm  map765x745.pgm  map_gmapping.pgm  mymap.yaml  mymap90.yaml  mymap_bkp.yaml  mymap_from_gmapping.yaml  x convertire  in pgm
src/myrobot/myrobotmaster/mybot_description/urdf/: mybot.xacro  myrobot.gazebo  myrobot.xacro
src/myrobot/myrobotmaster/parameters/: amcl.yaml  amcl_myparameters  cmdvelmux.yaml  dwa_local_planner_params.yaml  dwa_local_planner_test.yaml  global_planner_params.yaml  move_base_allmyparameters.yaml  move_base_params.yaml  movebase.yaml  movebase_myparameters
src/myrobot/myrobotmaster/rqt_exports/: Default.perspective  minimal.perspective
src/myrobot/myrobotmaster/rviz/: myrvizconfig.rviz  rvizConfig.rviz
src/myrobot/myrobotmaster/scripts/: controlpanel.py  prova_actionlib_client.py  prova_actionlib_server.py  runNodejsServer.sh  wrap_battery.py
src/myrobot/myrobotmaster/src/: myrobotmaster_node.cpp
src/myrobot/myrobotmaster/urdf/: myrobot (copy).urdf  myrobot.sdf  myrobot.urdf.bkp  myrobot.urdf~  myrobot.xacro  myrobot0.urdf  myrobot2.urdf  myrobot_bkp.urdf
src/myrobot/myrobotmaster/worlds/: myworld.world
src/myrobot/rm_dashboard/: CMakeLists.txt  README.md  package.xml  setup.py
src/myrobot/rm_dashboard/plugins/: plugin.xml
src/myrobot/rm_dashboard/scripts/: dashboard.py  rm_dashboard
src/myrobot/rm_dashboard/ui/: Dashboard.ui  pygui.ui
(+63 files in other folders)
