<?xml version="1.0"?>
<package>
  <name>myrobotmaster</name>
  <version>0.0.0</version>
  <description>The myrobotmaster package</description>
  <maintainer email="lcesarini1962@gmail.com">Luca Cesarini</maintainer> 
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_geometry_msgs</build_depend>
   <run_depend>tf2_geometry_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>	
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
<run_depend>actionlib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
